Fixing testimonial columns on mobile.

--- a/css/_testimonials.scss
+++ b/css/_testimonials.scss
@@ -1,23 +1,43 @@
 .testimonial-item {
   @include clearfix;
   font-family: $heading-font;
+
   .client {
     @include span(3 of 12);
     text-align: right;
     font-size: 28px;
     color: $dark-grey;
+
+    @media #{$medium-down} {
+      width: 100%;
+      text-align: left;
+    }
   }
+
   .testimonial {
     @include span(8 of 12);
     float: right;
     color: $medium-grey;
-    .text { font-size: 16px; margin-bottom: 20px; }
+
+    @media #{$medium-down} {
+      float: none;
+      width: 100%;
+    }
+
+    .text {
+      font-size: 16px;
+      margin-bottom: 20px;
+    }
+
     .name {
       color: $teal;
       text-transform: uppercase;
       font-size: 22px;
       font-weight: bold;
     }
-    .title { font-size: 16px; }
+
+    .title {
+      font-size: 16px;
+    }
   }
 }
