--- a/css/app.css
+++ b/css/app.css
@@ -4733,6 +4733,10 @@ button[type=submit] {
     text-align: right;
     font-size: 28px;
     color: #5e5e5e; }
+    @media only screen and (max-width: 840px) {
+      .testimonial-item .client {
+        width: 100%;
+        text-align: left; } }
   .testimonial-item .testimonial {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -4743,6 +4747,10 @@ button[type=submit] {
     padding-right: 15px;
     float: right;
     color: #979797; }
+    @media only screen and (max-width: 840px) {
+      .testimonial-item .testimonial {
+        float: none;
+        width: 100%; } }
     .testimonial-item .testimonial .text {
       font-size: 16px;
       margin-bottom: 20px; }
